# autostack

./: README.md  autostack.py
autostack/: README.md  angular.json  example.yaml  (+4 more)
autostack-engine/: .env.copy  README.md  example.json  example.yml  mongo.txt  pyproject.toml
autostack-engine/autostack_engine/ai/: main.py  project-extractor.Modelfile  training.jsonl
autostack-engine/autostack_engine/ai/client/: openai.py
autostack-engine/autostack_engine/gateway/: main.py
autostack-engine/autostack_engine/gateway/graphql/: schema.py
autostack-engine/autostack_engine/gateway/graphql/subscriptions/: job_subscription.py  project_subscriptions.py
autostack-engine/autostack_engine/scripts/: create_migration.py  migrate_database.py  run_consumers.py  run_gateway.py  run_service.py  seed_database.py  setup_database.py
autostack-engine/autostack_engine/services/ai/services/: ai.py
autostack-engine/autostack_engine/services/component/services/: components.py
autostack-engine/autostack_engine/services/environment/services/: development_create.py  production.py  technologies.py
autostack-engine/autostack_engine/services/logs/services/: logs.py
autostack-engine/autostack_engine/services/orchestration/service/: orchestration.py
autostack-engine/autostack_engine/utils/: constants.py
autostack-engine/autostack_engine/utils/ai/: util.py
autostack-engine/autostack_engine/utils/database/: mongo_client.py
autostack-engine/autostack_engine/utils/jobs/: util.py
autostack-engine/autostack_engine/utils/kafka/: base_topic.py  consumer_manager.py
autostack-engine/autostack_engine/utils/logging/: models.py  services.py
autostack-engine/autostack_engine/utils/orchestration/: models.py
autostack-engine/autostack_engine/utils/project/: icon_generator.py  subscription.py
autostack-engine/autostack_engine/utils/schema/: json.py  yaml.py
autostack-engine/deployments/docker/: compose.yml
autostack-engine/deployments/docker/mongodb/: 01-init-autostack-db.js
autostack-engine/deployments/kafka/scripts/: init.sh
autostack-engine/migrations/: 20250920_174254_setup_database.py  20251104_173501_implemented_logging.py  20251130_152624_created_project_chat.py  20251210_195832_created_activity_log.py  20260102_103822_created_schema_rating.py
(+215 files in other folders)
